bk_ida/gccida/c0/expand_complex_abs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2912:26: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_complex_abs( machine_mode mode, rtx op0, rtx target, int unsignedp) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2914:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v4; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2929:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+7Ch] [rbp-64h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2931:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode submode; // [rsp+84h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2937:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wider_mode; // [rsp+B4h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2938:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wider_modea; // [rsp+B4h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2939:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class classa; // [rsp+B8h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2942:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
classa = mode_class_0[mode]; 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2956:34: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !unsignedp && flag_trapv && mode_class_0[mode] == MODE_INT ) 
                                 ^~~~~~~~~~~~
                                 mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2963:34: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
mode0 = *( ( unsigned __int16 *)&insn_data_0[icode].operand[1] + 8); 
                                 ^~~~~~~~~~~
                                 insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2971:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[icode].operand[1].predicate( xop0, mode0) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2971:46: error: called object type '<dependent type>' is not a function or function pointer
if ( !insn_data_0[icode].operand[1].predicate( xop0, mode0) ) 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2973:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[icode].operand->predicate( temp, submode) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2973:44: error: called object type '<dependent type>' is not a function or function pointer
if ( !insn_data_0[icode].operand->predicate( temp, submode) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2975:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pat = insn_data_0[icode].genfun( temp, xop0); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2975:32: error: called object type '<dependent type>' is not a function or function pointer
pat = insn_data_0[icode].genfun( temp, xop0); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2997:21: error: expected expression
real = qToBigEndian<unsigned int>( submode, op0a); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/optabs.c:2997:8: error: use of undeclared identifier 'qToBigEndian'
real = qToBigEndian<unsigned int>( submode, op0a); 
       ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_complex_abs/src/obj/optabs.o] Error 1
